[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RVDLM"           # <-- IMPORTANT: real project name, not "your-package-name"
version = "0.1.0"
description = "Realized Volatility Dynamic Linear Models (RV-DLMs)"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Patrick Woitschig", email = "patrick.woitschig@duke.edu" }
]

dependencies = [
  "numpy",
  "pandas",
  "scipy",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PSW1998/Realized-Volatility-Dynamic-Linear-Model"
"Bug Tracker" = "https://github.com/PSW1998/Realized-Volatility-Dynamic-Linear-Model/issues"

[tool.hatch.build.targets.wheel]
# THIS tells hatch which packages to include in the wheel
packages = ["src/RVDLM"]

